--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,27 +16,27 @@
             android:id="@+id/hystory_view"
             android:layout_width="match_parent"
             android:layout_height="250sp"
+            android:text="1+1=3\n1+1+1=7\n1+1+1+1=15\n1+1+1+1+1=31\n1+1+1+1+1+1=63\n1+1+1+1+1+1+1=127"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:text="1+1=3\n1+1+1=7\n1+1+1+1=15\n1+1+1+1+1=31\n1+1+1+1+1+1=63\n1+1+1+1+1+1+1=127" />
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#c0c0c0"/>
+            android:background="#c0c0c0" />
 
         <TextView
             android:id="@+id/res_view"
             android:layout_width="match_parent"
             android:layout_height="100sp"
+            android:text="1+1=3"
             android:textColor="@color/white"
-            android:textSize="60sp"
-            android:text="1+1=3" />
+            android:textSize="60sp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#c0c0c0"/>
+            android:background="#c0c0c0" />
 
         <TableLayout
             android:layout_width="match_parent"
@@ -50,7 +50,7 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/button7"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
@@ -58,7 +58,7 @@
                     android:text="7" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/button8"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
@@ -66,7 +66,7 @@
                     android:text="8" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/button9"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
@@ -126,7 +126,7 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/button7"
+                    android:id="@+id/button1"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
@@ -134,7 +134,7 @@
                     android:text="1" />
 
                 <Button
-                    android:id="@+id/button8"
+                    android:id="@+id/button2"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
@@ -142,7 +142,7 @@
                     android:text="2" />
 
                 <Button
-                    android:id="@+id/button9"
+                    android:id="@+id/button3"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
@@ -164,7 +164,7 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/button10"
+                    android:id="@+id/button_dot"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
@@ -172,7 +172,7 @@
                     android:text="." />
 
                 <Button
-                    android:id="@+id/button11"
+                    android:id="@+id/button0"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
@@ -188,7 +188,7 @@
                     android:text="11" />
 
                 <Button
-                    android:id="@+id/button16"
+                    android:id="@+id/button_equals"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
