--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
 
         <TextView
             android:id="@+id/hystory_view"
-            android:layout_width="match_parent"
+            android:layout_width="386dp"
             android:layout_height="250sp"
-            android:text="1+1=3\n1+1+1=7\n1+1+1+1=15\n1+1+1+1+1=31\n1+1+1+1+1+1=63\n1+1+1+1+1+1+1=127"
+            android:layout_marginHorizontal="27sp"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
@@ -27,9 +27,9 @@
 
         <TextView
             android:id="@+id/res_view"
-            android:layout_width="match_parent"
+            android:layout_width="388dp"
             android:layout_height="100sp"
-            android:text="1+1=3"
+            android:layout_marginHorizontal="27sp"
             android:textColor="@color/white"
             android:textSize="60sp" />
 
@@ -50,36 +50,36 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/button7"
+                    android:id="@+id/b_7"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="7" />
+                    android:text="@string/_7" />
 
                 <Button
-                    android:id="@+id/button8"
+                    android:id="@+id/b_8"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="8" />
+                    android:text="@string/_8" />
 
                 <Button
-                    android:id="@+id/button9"
+                    android:id="@+id/b_9"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="9" />
+                    android:text="@string/_9" />
 
                 <Button
-                    android:id="@+id/button13"
+                    android:id="@+id/b_mult"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="Button2" />
+                    android:text="@string/multy" />
             </TableRow>
 
             <TableRow
@@ -88,36 +88,36 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/b_4"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="4" />
+                    android:text="@string/_4" />
 
                 <Button
-                    android:id="@+id/button5"
+                    android:id="@+id/b_5"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="5" />
+                    android:text="@string/_5" />
 
                 <Button
-                    android:id="@+id/button6"
+                    android:id="@+id/b_6"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="6" />
+                    android:text="@string/_6" />
 
                 <Button
-                    android:id="@+id/button14"
+                    android:id="@+id/b_minus"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="Button1" />
+                    android:text="@string/minus" />
             </TableRow>
 
             <TableRow
@@ -126,36 +126,36 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/button1"
+                    android:id="@+id/b_1"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="1" />
+                    android:text="@string/_1" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/b_2"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="2" />
+                    android:text="@string/_2" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/b_3"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="3" />
+                    android:text="@string/_3" />
 
                 <Button
-                    android:id="@+id/button15"
+                    android:id="@+id/b_plus"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="Button" />
+                    android:text="@string/plus" />
             </TableRow>
 
             <TableRow
@@ -164,37 +164,47 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/button_dot"
+                    android:id="@+id/b_dot"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="." />
+                    android:text="@string/dot" />
 
                 <Button
-                    android:id="@+id/button0"
+                    android:id="@+id/b_0"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="0" />
+                    android:text="@string/_0" />
 
                 <Button
-                    android:id="@+id/button12"
+                    android:id="@+id/b_div"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="11" />
+                    android:text="@string/div" />
 
                 <Button
-                    android:id="@+id/button_equals"
+                    android:id="@+id/b_equals"
                     android:layout_width="wrap_content"
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="=" />
+                    android:text="@string/eq" />
             </TableRow>
         </TableLayout>
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
