--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,26 +11,34 @@
         android:background="@color/back"
         android:orientation="vertical">
 
-        <TextView
+        <EditText
             android:id="@+id/hystory_view"
-            android:layout_width="386dp"
+            android:layout_width="match_parent"
             android:layout_height="250sp"
-            android:layout_marginHorizontal="27sp"
+            android:editable="false"
+            android:layout_marginStart="20sp"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:inputType="none"
+            android:importantForAutofill="no" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#c0c0c0" />
+            android:background="#c0c0c0"/>
 
-        <TextView
+        <EditText
             android:id="@+id/res_view"
-            android:layout_width="388dp"
-            android:layout_height="100sp"
-            android:layout_marginHorizontal="27sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20sp"
+            android:editable="false"
+            android:gravity="end"
+            android:singleLine="true"
             android:textColor="@color/white"
-            android:textSize="60sp" />
+            android:textSize="60sp"
+            android:importantForAutofill="no"
+            android:inputType= "none" />
 
         <View
             android:layout_width="match_parent"
@@ -41,8 +48,58 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginVertical="50sp"
+            android:layout_marginVertical="10sp"
             android:gravity="bottom">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/b_AC"
+                    android:layout_width="wrap_content"
+                    android:layout_height="70sp"
+                    android:insetLeft="5sp"
+                    android:insetRight="5sp"
+                    android:text="@string/AC"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
+
+                <Button
+                    android:id="@+id/b_del"
+                    android:layout_width="wrap_content"
+                    android:layout_height="70sp"
+                    android:insetLeft="5sp"
+                    android:insetRight="5sp"
+                    android:text="@string/del"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
+
+                <Button
+                    android:id="@+id/b_percent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="70sp"
+                    android:insetLeft="5sp"
+                    android:insetRight="5sp"
+                    android:text="@string/percent"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
+
+                <Button
+                    android:id="@+id/b_wdtfs"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="70sp"
+                    android:insetLeft="5sp"
+                    android:insetRight="5sp"
+                    android:text="@string/full"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
@@ -55,7 +112,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_7" />
+                    android:text="@string/_7"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_8"
@@ -63,7 +123,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_8" />
+                    android:text="@string/_8"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_9"
@@ -71,7 +134,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_9" />
+                    android:text="@string/_9"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_mult"
@@ -79,7 +145,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/multy" />
+                    android:text="@string/multy"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
             </TableRow>
 
             <TableRow
@@ -93,7 +162,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_4" />
+                    android:text="@string/_4"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_5"
@@ -101,7 +173,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_5" />
+                    android:text="@string/_5"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_6"
@@ -109,7 +184,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_6" />
+                    android:text="@string/_6"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_minus"
@@ -117,7 +195,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/minus" />
+                    android:text="@string/minus"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
             </TableRow>
 
             <TableRow
@@ -131,7 +212,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_1" />
+                    android:text="@string/_1"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_2"
@@ -139,7 +223,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_2" />
+                    android:text="@string/_2"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_3"
@@ -147,7 +234,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_3" />
+                    android:text="@string/_3"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_plus"
@@ -155,7 +245,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/plus" />
+                    android:text="@string/plus"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
             </TableRow>
 
             <TableRow
@@ -169,7 +262,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/dot" />
+                    android:text="@string/dot"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_0"
@@ -177,7 +273,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/_0" />
+                    android:text="@string/_0"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_div"
@@ -185,7 +284,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/div" />
+                    android:text="@string/div"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
 
                 <Button
                     android:id="@+id/b_equals"
@@ -193,7 +295,10 @@
                     android:layout_height="70sp"
                     android:insetLeft="5sp"
                     android:insetRight="5sp"
-                    android:text="@string/eq" />
+                    android:text="@string/eq"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    style="?android:attr/buttonBarButtonStyle" />
             </TableRow>
         </TableLayout>
 
